src/objects/Deal_Product__c.object
<CustomObject>
    <description>Used for the price and commission information for the deal info on single and multiple price point deals.</description>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <formula>( Product_Usual_Selling_Price__c - Product_price__c )/ Product_Usual_Selling_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Pitch</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Products</relationshipLabel>
        <relationshipName>Deal_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Cap__c</fullName>
        <label>Cap</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Media_Surcharge__c</fullName>
        <label>Media Surcharge</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Supplier_Rate__c</fullName>
        <label>Supplier % Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Supplier_Unredeemed_Rate__c</fullName>
        <label>Supplier Unredeemed % Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Usual_Selling_Price__c</fullName>
        <label>Usual Selling Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Wowcher_Commission__c</fullName>
        <formula>1 -  Product_Supplier_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wowcher Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_price__c</fullName>
        <label>Deal Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Deal Product</label>
    <nameField>
        <label>Deal Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>WowcherPitchStageSignedRejected</fullName>
        <active>true</active>
        <description>Applies to Wowcher only, if the Opportunity is at Stage Signed Rejected the Opportunity cannot be change by Non Execs or Non Managers.</description>
        <errorConditionFormula>BEGINS(  Opportunity__r.RecordType.DeveloperName  ,&apos;Wowcher&apos;) 
&amp;&amp; ISPICKVAL( Opportunity__r.StageName , &apos;Signed Rejected&apos;) 
&amp;&amp; !CONTAINS($UserRole.Name , &apos;Manager&apos;) 
&amp;&amp; !CONTAINS($UserRole.Name , &apos;MD&apos;) 
&amp;&amp; !CONTAINS($UserRole.Name , &apos;Exec&apos;) 
&amp;&amp; !( $Setup.No_Validations__c.Flag__c )</errorConditionFormula>
        <errorMessage>Cannot amend or create a Deal Product when the Pitch is Signed Rejected, please ask your manager.</errorMessage>
    </validationRules>
</CustomObject>